<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="IO" Id="{0d0281e7-db20-0599-0a82-6d9183941071}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	

//----------------------------------DO Place Holder INIT valve 1 -------------------------------------------------//
	//AO1 AT %Q* : REAL;
	DO1 AT %Q* : BOOL;
//---------------------------------------------------------------------------------------------------------------//
	
//---------------------------------- PUMP MAPPING -------------------------------------------------//
	// WFI Pump (index 1)
	DO_wfiPump AT %Q* : BOOL;			// Digital Output for turning pump on and off
	AO_wfiPump AT %Q* : REAL;			// Analog Output for pump speed control
	// Suspension Pump (index 2) - not yet connected
	// DO_suspPump AT %Q* : BOOL;		// Digital Output for turning pump on and off
	// AO_suspPump AT %Q* : REAL;		// Analog Output for pump speed control
//-------------------------------------------------------------------------------------------------//

//---------------------------------- PRESSURE SENSOR MAPPING ----------------------------------------//
	// WFI Pressure Sensor (index 1)
	AI_wfiPressureSensor AT %I* : REAL;			// Analog Input for WFI pressure sensor (4-20mA)
	// Suspension Pressure Sensor (index 2) - not yet connected
	// AI_suspPressureSensor AT %I* : REAL;
	// TFF Outlet Pressure Sensor (index 3) - not yet connected
	// AI_tffOutletPressureSensor AT %I* : REAL;
//-------------------------------------------------------------------------------------------------//

//---------------------------------- MASS FLOW METER MAPPING ------------------------------------------//
	// WFI Mass Flow Meter (index 1)
	AI_wfiFlowMeter AT %I* : DINT;				// Coriolis meter raw input (24-bit DINT)
	// Suspension Mass Flow Meter (index 2) - not yet connected
	// AI_suspMassFlowMeter AT %I* : DINT;
	// Discharge Flow Meter (index 3) - not yet connected
	// AI_dischargeFlowMeter AT %I* : DINT;
//-------------------------------------------------------------------------------------------------//

//---------------------------------- VALVE MAPPING ------------------------------------------------//
	// IOs Dilution Selector Valve (SV)
    DI1_dilutionSV AT %I* : BOOL; 		// Digital Input 1 Closed Feedback
    DI2_dilutionSV AT %I* : BOOL; 		// Digital Input 2 Open Feedback
    AI1_dilutionSV AT %I* : REAL;  		// Analog Input 1 Valve Position Feedback
    DO1_dilutionSV AT %Q* : BOOL; 		// Digital Output 1 Valve Initialization
    AO1_dilutionSV AT %Q* : REAL; 		// Analog Output 1 Valve Position Control Variable (0-10V)
    
    // IOs WFI Selector Valve (SV) 
    DI1_wfiSV AT %I* : BOOL;      		// Digital Input 1 Closed Feedback
    DI2_wfiSV AT %I* : BOOL;      		// Digital Input 2 Open Feedback
    AI1_wfiSV AT %I* : REAL;       		// Analog Input 1 Valve Position Feedback
    DO1_wfiSV AT %Q* : BOOL;     		// Digital Output 1 Valve Initialization
    AO1_wfiSV AT %Q* : REAL;      		// Analog Output 1 Valve Position Control Variable (0-10V)

	// IOs Formation Drain Valve 
    DI1_formDrain AT %I* : BOOL;      	// Digital Input 1 Closed Feedback
    DI2_formDrain AT %I* : BOOL;      	// Digital Input 2 Open Feedback
    AI1_formDrain AT %I* : REAL;       	// Analog Input 1 Valve Position Feedback
    DO1_formDrain AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_formDrain AT %Q* : REAL;      	// Analog Output 1 Valve Position Control Variable (0-10V)
	
	// IOs WFI Bypass Inlet Valve
    DI1_wfiBypassIn AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_wfiBypassIn AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_wfiBypassIn AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_wfiBypassIn AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_wfiBypassIn AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
		// IOs WFI Filter Inlet Valve
    DI1_wfiFilterIn AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_wfiFilterIn AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_wfiFilterIn AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_wfiFilterIn AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_wfiFilterIn AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
		// IOs WFI Filter Outlet Valve
    DI1_wfiFilterOut AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_wfiFilterOut AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_wfiFilterOut AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_wfiFilterOut AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_wfiFilterOut AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
		// IOs WFI Bypass Outlet Valve
    DI1_wfiBypassOut AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_wfiBypassOut AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_wfiBypassOut AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_wfiBypassOut AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_wfiBypassOut AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
		// IOs Dilution Diverter Valve
    DI1_dilutionDiV AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_dilutionDiV AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_dilutionDiV AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_dilutionDiV AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_dilutionDiV AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
		// IOs Formation Manifold Valve
    DI1_FormManifold AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_FormManifold AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_FormManifold AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_FormManifold AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_FormManifold AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
		// IOs Suspension Manifold Valve
    DI1_SuspManifold AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_SuspManifold AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_SuspManifold AT %I* : REAL;      // Analog Input 1 Valve Position Feedback
    DO1_SuspManifold AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_SuspManifold AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (0-10V)
	
			// IOs Test Manifold Valve
    DI1_TestManifold AT %I* : BOOL;      // Digital Input 1 Closed Feedback
    DI2_TestManifold AT %I* : BOOL;      // Digital Input 2 Open Feedback
    AI1_TestManifold AT %I* : REAL;      // Analog Input 1 Valve Position Feedback (4-20ma)
    DO1_TestManifold AT %Q* : BOOL;     	// Digital Output 1 Valve Initialization
    AO1_TestManifold AT %Q* : REAL;      // Analog Output 1 Valve Position Control Variable (4-20ma)
//-------------------------------------------------------------------------------------------------//

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>