<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FBUO_OverPressure_1" Id="{d0d6383a-d8b4-0693-144b-0eb7d3fc8ac4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FBUO_OverPressure_1
VAR_INPUT
    fbOPprocessState 		: BOOL;
    fbValvePositionReady 	: BOOL;
	fbPumpActive 			: BOOL;
	fbPumpSpeed				: REAL;
END_VAR
VAR_IN_OUT
    fbValves : ARRAY[1..gvl.valveCount] OF ST_Valves;
END_VAR
VAR_OUTPUT
	
END_VAR
VAR
    valveIndex : ARRAY[1..GVL.valveCount] OF INT := [1,2,3];
	numValvesToPosition : INT := 10;
    targetState : INT;
    targetOpenClose : BOOL;
	fbSetValvesOpen : FB_ValvePos;
	fbSetValvesClose : FB_ValvePOSClose;
	valveCtrl : FB_valveCTRL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF fbOPprocessState THEN
    IF fbValvePositionReady THEN
        fbSetValvesOpen(
            fbValveIndex := valveIndex,
            fbNumValvesToPosition := numValvesToPosition,
            fbValves := fbValves);
    ELSE
      	fbSetValvesClose(
            fbValveIndex := valveIndex,
            fbNumValvesToPosition := numValvesToPosition,
            fbValves := fbValves);
    END_IF
    
    ValveCtrl(fbValves := fbValves);
    gvl.AO1_dilutionSV := fbValves[1].AO1;
    gvl.AO1_wfiSV := fbValves[2].AO1;
    gvl.AO1_formDrain := fbValves[3].AO1;
    gvl.AO1_wfiBypassIn := fbValves[4].AO1;
	gvl.AO1_wfiFilterIn := fbValves[5].AO1;
	gvl.AO1_wfiFilterOut := fbValves[6].AO1;
	gvl.AO1_wfiBypassOut := fbValves[7].AO1;
	gvl.AO1_dilutionDiV := fbValves[8].AO1;
	gvl.AO1_FormManifold := fbValves[9].AO1;
	gvl.AO1_SuspManifold := fbValves[10].AO1;
//-----------------------PUMP Control ----------------------//	
	IF fbPumpActive THEN
	// 	outputAO3 := IO.AO3 := 5;
		GVL.DO_wfiPump := fbPumpActive;
		GVL.AO_wfiPump := fbPumpSpeed;
	ELSE
		GVL.DO_wfiPump := fbPumpActive;
		GVL.AO_wfiPump := 0;
	END_IF	
//---------------------------------------------------------//	
END_IF




// IF meOPprocessState THEN
//     IF meValvePositionReady THEN
//         targetState := 1;
//         targetOpenClose := TRUE;
//     ELSE
//         targetState := 0;
//         targetOpenClose := FALSE;
//     END_IF
//     
//     FOR i := 1 TO numValvesToPosition DO		// change this for the number of valves.
//         FOR j := 1 TO GVL.valveCount DO
//             IF meValves[j].name = valveNames[i] THEN
//                 meValves[j].state := targetState;
//                 meValves[j].hOpenClose := targetOpenClose;
//                 EXIT;
//             END_IF
//         END_FOR
//     END_FOR;
//     ValveCtrl(fbValves := meValves);
//     gvl.gvAnOut1_dilutionSV := meValves[1].AO1;
//     gvl.gvAnOut1_wfiSV := meValves[2].AO1;
//     gvl.gvAnOut1_formDrain := meValves[3].AO1;
//     gvl.gvAnOut1_wfiBypassIn := meValves[4].AO1;
// 	
// 	
// 	
// 	
// END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>