<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FBUO_OverPressure_EX" Id="{ae5c0142-f2ed-0d00-14af-dca5889fcd67}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FBUO_OverPressure_EX
VAR_INPUT
    fbOPprocessState 		: BOOL;
    fbValvePositionReady 	: BOOL;
	fbPumpActive 			: BOOL;
	fbPumpSpeed				: REAL;
END_VAR
VAR_IN_OUT
    fbValves : ARRAY[1..GVL.valveCount] OF ST_Valves;
END_VAR
VAR_OUTPUT
	
END_VAR
VAR
    valveIndexOpen : ARRAY[1..GVL.valveCount] OF INT := [2,4,7,8,9,10];
	numValvesToOpen : INT := 10;
	valveIndexClose : ARRAY[1..GVL.valveCount] OF INT := [2,4,7,8,9,10];
	numValvesToClose : INT := 10;
    targetState : INT;
    targetOpenClose : BOOL;
	fbValvePos : FB_ValvePOS;
	valveCtrl : FB_valveCTRL;
	valveIndex: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF fbOPprocessState THEN
	
	fbValvePos(fbValveIndexOpen := valveIndexOpen,
            fbNumValvesToOpen := numValvesToOpen,
			fbValveIndexClose := valveIndexClose,
            fbNumValvesToClose := numValvesToClose,
            fbValves := fbValves,
			fbProcessValves2Open := fbValvePositionReady);
    
    ValveCtrl(fbValves := fbValves);
    IO.AO1_dilutionSV := fbValves[1].AO1;
    IO.AO1_wfiSV := fbValves[2].AO1;
    IO.AO1_formDrain := fbValves[3].AO1;
    IO.AO1_wfiBypassIn := fbValves[4].AO1;
	IO.AO1_wfiFilterIn := fbValves[5].AO1;
	IO.AO1_wfiFilterOut := fbValves[6].AO1;
	IO.AO1_wfiBypassOut := fbValves[7].AO1;
	IO.AO1_dilutionDiV := fbValves[8].AO1;
	IO.AO1_FormManifold := fbValves[9].AO1;
	IO.AO1_SuspManifold := fbValves[10].AO1;
	
	
	
//-----------------------PUMP Control ----------------------//	
// 	IF fbPumpActive THEN
// 	outputAO3 := IO.AO3 := 5;
// 		GVL.DO_wfiPump := fbPumpActive;
// 		GVL.AO_wfiPump := fbPumpSpeed;
// 	ELSE
// 		GVL.DO_wfiPump := fbPumpActive;
// 		GVL.AO_wfiPump := 0;
// 	END_IF	
//---------------------------------------------------------//	
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>